# oxidizr

./: .gitignore  .gitmodules  AUDIT_AND_LOGGING.md  AUDIT_CHECKLIST.md  AUR_COMPLIANCE.md  BEHAVIOR_CONTAINER_RUNNER.md  BEHAVIOR_HOST_ORCH.md  BUG-APPLY-POLICY-GATING.md  CODE_ANALYSIS_REPORT.md  CONTRIBUTING.md  CURRENT_BEHAVIOR.md  Cargo-v2.toml  Cargo.toml  DELTA_BEHAVIOR.md  DISTRO_AWARENESS_PLAN.md  DISTRO_IMAGES.md  FULL_MATRIX_TESTING_PLAN.md  GERMAN_LOCALE_TEST_ISSUE.md  GLOSSARY.md  HARDEING_TODO.md  HARDENING_TASKS.md  LICENSE  LOGGING_PLAN.md  LOGGING_TODO.md  Makefile  NEW_SPEC_FOR_TESTING.md  PKGBUILD  README.md  REFACTOR_EXECUTION_PLAN.md  SAFETY_MEASURES.md  SECURITY_FIXES_SUMMARY.md  SPLIT_PLAN.md  SWITCHYARD_PLAN.md  TECHNICAL_IMPLEMENTATION.md  TESTING_POLICY.md  TESTING_REQUIREMENTS.MD  TEST_DOWNLOADS_ANALYTICS-cachyos.md  TEST_DOWNLOADS_ANALYTICS-manjaro.md  TEST_DOWNLOADS_ANALYTICS.md  TODO.md  (+10 more)
.github/workflows/: book.yml  ci.yml  lint-guardrails.yml  release-aur.yml  release-deb.yml  test-unit.yml
PROJECT_PLANS/: 10_DEPENDENCY_FOOTPRINT_TRIM.md  11_TESTS_&_CI_PIPELINE.md  12_DOCS_&_OPERATOR_PLAYBOOKS.md  1_PROFILES_&_ATOMIC_FLIP.md  2_PREFLIGHT_&_PLAN_DIFF.md  3_METADATA_BACKUP_FILE_vs_SYMLINK.md  4_AUDIT_ATTESTATION_SELECTIVE_HASHING.md  5_PACKAGE_SUPPLY_CHAIN_REPO_FIRST_AUR_OPTIN.md  6_CANARY_SHELL_&_GNU_ESCAPE_PATH.md  7_SMOKE_TESTS_&_AUTO_ROLLBACK.md  8_COMPAT_MATRIX_&_PREFLIGHT_DETECTORS.md  9_UX_CLI_VERBOSITY_POLICY_LOCK_WAIT.md  A_PROFILES_FLIP_CANARY_SMOKES_BACKUP.md  B_PREFLIGHT_PLAN_COMPAT_UX.md  C_AUDIT_ATTESTATION_AND_DOCS.md  D_SUPPLY_CHAIN_POLICY_LOCK_WAIT.md  E_DEPENDENCY_FOOTPRINT_TRIM.md  README.md  SAFETY_DECISIONS_AUDIT.md  Z_TESTS_AND_CI_PIPELINE.md
blep/: isolated-runner  main.go  smoke.go
blep/docker/: Dockerfile
cargo/bdd-runner/: Cargo.toml  DEVELOPMENT.md  README.md  SPEC.md
cargo/bdd-runner/src/: audit_schema.rs  error_codes.rs  lib.rs  steps_common.rs  world.rs
cargo/bdd-runner/tests/: bdd.rs
cargo/oxidizr-cli-core/: Cargo.toml  README.md
cargo/oxidizr-cli-core/DOCS/: PRODUCTION_READY.md  PUBLISH_READY.md  RELEASE_READY.md
cargo/oxidizr-cli-core/SPEC/: SPEC.md
cargo/oxidizr-cli-core/src/: adapter.rs  coverage.rs  coverage2.rs  lib.rs  packages.rs
cargo/oxidizr-cli-core/tests/: bdd_main.rs  world.rs
cargo/oxidizr-cli-core/tests/features/: coverage_check.feature  coverage_preflight.feature  discover.feature  resolve.feature
cargo/oxidizr-cli-core/tests/steps/: assert_steps.rs  common_steps.rs  coverage_steps.rs  discover_steps.rs  mod.rs  resolve_steps.rs
cargo/oxidizr-deb/: Cargo.toml  README.md  SAFETY_MANIFESTO.md  TODO-RELEASE.md  TODO.md
cargo/oxidizr-deb/PLAN/: 01-switchyard-integration.md  02-src-organization.md  03-features-and-bdd-tests.md  04-test-combinations-matrix.md  05-implementation-plan.md  06-spec-traceability-and-docs.md
cargo/oxidizr-deb/SPEC/: DEBIAN_UX.md  SPEC.md  USER_FLOW.md
cargo/oxidizr-deb/src/: errors.rs  main.rs
cargo/oxidizr-deb/src/adapters/: alternatives.rs  debian.rs  debian_adapter.rs  divert.rs  mod.rs  preflight.rs
cargo/oxidizr-deb/src/cli/: args.rs  completions.rs  handler.rs
cargo/oxidizr-deb/src/commands/: doctor.rs  mod.rs  replace.rs  restore.rs  status.rs  use_cmd.rs
cargo/oxidizr-deb/src/fetch/: fallback.rs  mod.rs  resolver.rs  sources.rs  verifier.rs
cargo/oxidizr-deb/src/util/: diagnostics.rs  mod.rs  prompts.rs
cargo/oxidizr-deb/tests/: bdd_main.rs
cargo/oxidizr-deb/tests/bdd_support/: mod.rs
cargo/oxidizr-deb/tests/bdd_world/: mod.rs
cargo/oxidizr-deb/tests/features/: apt_locks.feature  coreutils_replace_dry_run.feature  coreutils_use_restore.feature  dry_run_default.feature  findutils_use_restore.feature  replace_commit_non_live_root_error.feature  replace_commit_with_locks.feature  replace_findutils_dry_run.feature  replace_sudo_dry_run.feature  restore_coreutils_keep_dry_run.feature  restore_coreutils_no_keep_dry_run.feature  status_json.feature  status_tips.feature  sudo_use_guard.feature  use_commit_non_live_root_missing_artifact.feature
cargo/oxidizr-deb/tests/steps/: assert_steps.rs  cli_steps.rs  common_steps.rs  fs_steps.rs  locks_steps.rs  mod.rs
ci/: front_page.pml
docs/: CLEAN_CODE.md  DownloadAnalytics.md  PUBLISHING.md  SELINUX_APPLET_PARITY.md  VERBOSITY.md  split-oxidizr-arch-into-submodule.md
docs/Flakes/: sudo-rs-not-found.md
docs/cukerust/: recommendations.md  run_matrix.md  step_index.json  survey.json  tags.json
docs/testing/: TESTING_POLICY.md  VIBE_CHECK.md  WHY_LLMS_ARE_STUPID.md
scripts/: 1_split_dry_run.sh  2_spli_commit.sh  arch_dev_proof.sh  arch_dev_shell.sh  bdd_filter_results.py  debian_live_proof.sh  e2e_oxidizr_deb.sh  gen_step_index.py  ubuntu_dev_proof.sh  ubuntu_dev_shell.sh  ubuntu_full_smoke.sh
src/: README.md  cli.rs  config.rs  error.rs  lib.rs  main.rs  package_manager.rs
src-2/: Cargo.toml  error.rs  lib.rs
src-2/checks/: compat.rs
src-2/cli/: handler.rs  mod.rs
src-2/experiments/: coreutils.rs  findutils.rs  mod.rs  sudors.rs
src-2/logging/: mod.rs  provenance.rs
src-2/symlink/: ops.rs
switchyard/: Cargo.toml  FEATURES.md  MISSING_IN_SWITCHYARD.md  SWITCHYARD_PLAN.md  SWITCHYARD_SPECIFICATIONS.md
test-orch/: DISTRO_MATRIX.md  README.md  REFACTORING_OPPORTUNITIES.md  arch_runner.go  docker_checks.go  go.mod  helpers.go  main.go  smoke.go
test-units/: cli_tests.rs  security_tests.rs
tests/: INDEX.md  README.md  cli_tests.rs  experiment_tests.rs
(+145 files in other folders)
