[package]
name = "oxidizr-arch"
version = "0.1.0"
edition = "2021"
description = "An oxidizr port to Arch Linux written in Rust"
repository = ""
license = "GPL-3.0-or-later"
keywords = ["coreutils", "cli", "gnu", "uutils"]
categories = ["command-line-utilities"]

[lib]
name = "oxidizr_arch_v2"
path = "src/lib.rs"

[[bin]]
name = "oxidizr-arch"
path = "src/main.rs"

[dependencies]
thiserror = "1.0"
clap = { version = "4.4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
nix = { version = "0.29", features = ["user"] }
which = "6.0"
chrono = "0.4"
lazy_static = "1.4"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.12"

[features]
default = []
# Enable real Arch Linux system operations (pacman/paru, filesystem changes).
# When disabled, a no-op System is used.
arch = []
