[package]
name = "switchyard"
version = "0.1.0"
edition = "2021"
description = "Reusable safety switchyard: plan/preflight/apply for safe symlink switching, backups, and restores"
license = "GPL-3.0-or-later"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
libc = "0.2"
