[package]
name = "bdd-runner"
version = "0.1.0"
edition = "2021"

[lib]
# We only use the lib to host shared step helpers; the test target runs cucumber.
path = "src/lib.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
toml = "0.8"
cucumber = { version = "0.21", features = ["macros", "output-json"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
regex = "1"

# (Optional) If you want to call into switchyard’s library API directly, add it here:
# switchyard = { path = "../switchyard" }

[[test]]
name = "bdd"
path = "tests/bdd.rs"
harness = false  # cucumber provides its own test harness
