[package]
name = "oxidizr-cli-core"
version = "0.1.0"
edition = "2021"
description = "Common helpers for oxidizr-* CLIs (API builder, prompts)"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/veighnsche/oxidizr-arch"
keywords = ["cli", "switchyard"]
readme = "README.md"
categories = ["command-line-utilities"]
documentation = "https://docs.rs/oxidizr-cli-core"
rust-version = "1.81"
exclude = [
  "Cargo.toml.orig",
]

[package.metadata.docs.rs]
all-features = false
features = []
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
switchyard = { package = "switchyard-fs", version = "0.1.0" }
atty = "0.2"

[features]
default = []
bdd = []

[dev-dependencies]
cucumber = { version = "0.20", features = ["macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tempfile = "3.10"
regex = "1"

[[test]]
name = "bdd"
path = "tests/bdd_main.rs"
harness = false
required-features = ["bdd"]
